--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Santiago Romano",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
